# protocol-host-rs

./: Cargo.toml  Dockerfile  README.md  commands.txt
.github/workflows/: main.yml
commands/: add-fabric.txt  e2e-pulsing.txt  remove-fabric.txt  set-power-0.txt  set-power-2.txt  set-power-4.txt  set-power-6.txt  set-power-8.txt  stop.txt
src/: lib.rs  main.rs  network.rs  obid.rs  serial.rs  vrp.rs
src/conn/: common.rs  ethernet.rs  mock.rs  mod.rs  usb.rs
src/error/: mod.rs
src/network/: client.rs  common.rs  server.rs
src/obid/: mod.rs  protocol.rs  serial.rs  status.rs
src/protocol/: common.rs  mock.rs  mod.rs
src/protocol/haptic/: v0.rs
src/vrp/: mod.rs  vrp.rs
tests/: common.rs  tests.rs
