[package]
name = "vr_actuators_cli"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3"
clap = "2.33.1"
log = "0.4.8"
simple_logger = "1.6.0"