[package]
name = "vr_actuators_cli"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
hex = "0.4.2"
libusb = "0.3"
log = "0.4.8"
owning_ref = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.6.0" 
uuid = { version = "0.8", features = ["v4"] }
zmq = "0.9"

[profile.release]
lto = true