[package]
name = "protocol_host_rs"
version = "0.2.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"

[lib]
name = "protocol_host_lib"
path = "src/lib.rs"

[[bin]]
name = "protocol_host_cli"
path = "src/main.rs"

[features]
default = ["mock"]

# Allow always successful mock connections
mock = []
# Allow connections over usb via libusb
usb = [ "libusb" ]
# Allow connections over ethernet via tcp/ip
ethernet = []

# Allow the Haptic v0 protocol over the whatever connection is configured
haptic_v0 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
clap = "2.33.1"
hex = "0.4.2"
libusb = { version = "0.3", optional = true }
log = "0.4.8"
owning_ref = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11.0"
smallvec = "1.4.1"
uuid = { version = "0.8", features = ["v4"] }
zmq = "0.9"

[profile.release]
lto = true